--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,16 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.activity:activity-ktx:1.7.1"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     //Camera
     def camerax_version = "1.2.2"
@@ -53,6 +56,11 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.2.2"
     implementation "androidx.camera:camera-core:1.2.2"
     implementation "androidx.camera:camera-view:1.2.2"
+    //Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    //LiveData
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
